--- a/style.css
+++ b/style.css
@@ -6,28 +6,28 @@
 
 @font-face {
   font-family: 'Poppins';
-  src: url('./fonts/Poppins-Light.woff2') format('woff2');
+  src: url('Poppins-Light.woff2') format('woff2');
   font-weight: 300;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Poppins';
-  src: url('./fonts/Poppins-Medium.woff2') format('woff2');
+  src: url('Poppins-Medium.woff2') format('woff2');
   font-weight: 400;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Poppins';
-  src: url('./fonts/Poppins-SemiBold.woff2') format('woff2');
+  src: url('Poppins-SemiBold.woff2') format('woff2');
   font-weight: 600;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Poppins';
-  src: url('./fonts/Poppins-Bold.woff2') format('woff2');
+  src: url('Poppins-Bold.woff2') format('woff2');
   font-weight: 700;
   font-style: normal;
 }
@@ -240,5 +240,4 @@ form{
   font-size: 10px;
   align-items: flex-start;
 }
-
 }
